# grout

./: .codespellrc  Containerfile  GNUmakefile  meson.build  meson_options.txt
.github/workflows/: check.yml
api/: gr_net_compat.h
cli/: display.c  display.h  exec.c  tty.c
docs/: grout-frr.7.scdoc  grout.8.scdoc
frr/: if_grout.c  if_grout.h  l3vni_map.c  l3vni_map.h  log_grout.h  meson.build  rt_grout.c  rt_grout.h  zebra_dplane_grout.c  zebra_dplane_grout.h
main/: config.h  grout.default  main.c
modules/infra/api/: gr_nexthop.h  nexthop.c
modules/infra/cli/: cli_l3.h  route.c
modules/infra/control/: bond.c  ctlplane.c  gr_nh_control.h  iface_test.c  nexthop.c  port.c  worker.c  worker.h
modules/infra/datapath/: control_input.c  control_input.h  main_loop.c
modules/ip/api/: gr_ip4.h
modules/ip/cli/: icmp.c  route.c
modules/ip/control/: route.c
modules/ip6/api/: gr_ip6.h
modules/ip6/cli/: icmp6.c  route.c
modules/ip6/control/: route.c
modules/ip6/datapath/: gr_ip6_datapath.h  ip6_input.c  ip6_local.c
modules/l2/api/: gr_l2.h
modules/l2/cli/: fdb.c
modules/l2/control/: bridge.c  fdb.c  (+1 more)
modules/srv6/: control_local.c  datapath_local.c  srv6_priv.h
rpm/: grout.spec
smoke/: _init.sh  _init_frr.sh  bfd6_frr_test.sh  bgp6_srv6_frr_test.sh  config_test.sh  demo_bgp6_srv6.sh  demo_bgp6_srv6_kde.sh  evpn_l2l3vni_frr_test.sh  evpn_l3vpn_frr_test.sh  frr_restart_graceful_frr_test.sh  so_bindtodevice_test.sh  so_listen_test.sh  srv6_encapsrc_frr_test.sh  srv6_test.sh
subprojects/: dpdk-25.11.wrap  dpdk.wrap  frr-10.5.wrap  frr-10.7.wrap
(+8 files in other folders)
